force-app/main/default/objects/Test_Drive__c/fields/Assigned_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>