force-app/main/default/objects/Test_Drive__c/fields/Checked_In_At__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_At__c</fullName>
    <description>Timestamp when the dealer marked the customer as arrived.</description>
    <label>Checked In At</label>
    <type>DateTime</type>
</CustomField>