force-app/main/default/objects/Test_Drive__c/fields/Competitor_Considered__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Considered__c</fullName>
    <description>Competing brand(s) the customer mentioned comparing against (e.g., Tesla Model S, BMW i7, Polestar 2).</description>
    <label>Competitor Considered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>