force-app/main/default/objects/Test_Drive__c/fields/Drive_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Drive_Duration_Minutes__c</fullName>
    <description>Duration of the test drive in minutes, computed from Drive_Started_At__c and Drive_Ended_At__c.</description>
    <formula>IF(AND(NOT(ISBLANK(Drive_Started_At__c)), NOT(ISBLANK(Drive_Ended_At__c))), (Drive_Ended_At__c - Drive_Started_At__c) * 1440, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>