force-app/main/default/objects/Test_Drive__c/fields/Drive_Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Drive_Ended_At__c</fullName>
    <description>Timestamp when the dealer ended the test drive.</description>
    <label>Drive Ended At</label>
    <type>DateTime</type>
</CustomField>