force-app/main/default/objects/Test_Drive__c/fields/Drive_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Drive_Started_At__c</fullName>
    <description>Timestamp when the dealer started the test drive.</description>
    <label>Drive Started At</label>
    <type>DateTime</type>
</CustomField>