force-app/main/default/objects/Test_Drive__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Drive</fullName>
                <default>true</default>
                <label>Standard Drive</label>
            </value>
            <value>
                <fullName>Experience Drive</fullName>
            </value>
            <value>
                <fullName>Virtual Preview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>