force-app/main/default/objects/Test_Drive__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <description>Recommended next step after the drive. Drives automated customer follow-up email content.</description>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Quote</fullName>
            </value>
            <value>
                <fullName>Send Brochure</fullName>
            </value>
            <value>
                <fullName>Schedule Follow-up</fullName>
            </value>
            <value>
                <fullName>Schedule Second Drive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>