force-app/main/default/objects/Test_Drive__c/fields/Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Notes__c</fullName>
    <description>Sales rep free-form notes captured post-drive (customer reactions, objections, specific feedback).</description>
    <label>Outcome Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>