force-app/main/default/objects/Test_Drive__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dealership sales rep assigned to handle this test drive. Used as Opportunity owner on auto-create.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Drives (Sales Rep)</relationshipLabel>
    <relationshipName>Test_Drives_As_Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>