force-app/main/default/objects/Test_Drive__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Model</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>